--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -36,8 +36,8 @@
         .main__body__message-list__message__text yes yes yes
   .main__footer
     %form.main__footer__body
-      %input{:placeholder => "type a message", :type => "text", :id => "input"}/
+      %input{:placeholder => "type a message", :type => "text", :class => "input"}/
       .image
         %a{:href => ""}
           %i.far.fa-image.fa-lg
-      %input{:type => "submit", :value => "Send", :id => "submit"}/
+      %input{:type => "submit", :value => "Send", :class => "submit"}/
