--- a/app/assets/stylesheets/modules/_main.scss
+++ b/app/assets/stylesheets/modules/_main.scss
@@ -64,42 +64,42 @@
       }
     }
   }
-  &__footer{
-    background-color: $gray;
-    position: absolute;
-    bottom: 0;
-    width: calc(100vw - 380px);
-    padding: 20px 40px;
-    &__body {
-      display: flex;
-      .input {
-        font-size: 16px;
-        color: $textNavy;
-        border: none;
-        line-height: 50px;
-        padding-left: 10px;
-        width: calc(100% - 160px);
-      }
-      .image {
-        height: 50px;
-        padding-right: 10px;
-        background-color: $white;
-        .fa-image {
-          line-height: 50px;
-          a:visited {
-            color: $white;
-          }
-        }
-      }
-      .submit {
-        background-color: $mainBlue;
-        color: $white;
-        line-height: 50px;
-        padding: 0 25px;
-        margin-left: 15px;
-        border: none;
-        float: right;
+}
+.form{
+  background-color: $gray;
+  position: absolute;
+  bottom: 0;
+  width: calc(100vw - 380px);
+  padding: 20px 40px;
+  &__message {
+    float: left;
+    font-size: 16px;
+    color: $textNavy;
+    border: none;
+    height: 50px;
+    padding-left: 10px;
+    width: calc(100% - 155px);
+  }
+  &__mask{
+    height: 50px;
+    padding-right: 10px;
+    float: left;
+    background-color: $white;
+    &__image {
+      background-color: $white;
+      line-height: 50px;
+      .hidden {
+        display: none;
       }
     }
+  }
+  &__submit {
+    background-color: $mainBlue;
+    color: $white;
+    line-height: 50px;
+    padding: 0 25px;
+    margin-left: 15px;
+    border: none;
+    float: right;
   }
 }
