--- a/app/assets/stylesheets/modules/_main.scss
+++ b/app/assets/stylesheets/modules/_main.scss
@@ -40,6 +40,7 @@
     background-color: $lightGray;
     height: calc(100vh - 100px - 90px);
     padding: 0 40px;
+    overflow:scroll;
     &__message-list {
       padding-top: 16px;
       &__message {
