--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -4,9 +4,11 @@
   .main__header
     .main__header__left
       .main__header__left__group-name
-        current-group-name
-      .main__header__left__member MEMBER: AAA BBB CCC
-    .main__header__edit  edit
+        = @group.name
+      .main__header__left__member
+        MEMBER: #{current_user.name}
+    .main__header__edit
+      = link_to "edit", edit_group_path(@group)
   .main__body
     .main__body__message-list
       = render @messages
