--- a/app/views/shared/_side_bar.html.haml
+++ b/app/views/shared/_side_bar.html.haml
@@ -7,7 +7,7 @@
         = link_to new_group_path do
           = fa_icon "edit"
       %li
-        = link_to edit_user_path do
+        = link_to edit_user_path(current_user.id) do
           = fa_icon "cog"
   .sidebar__groups
     .sidebar__groups__list
