--- a/app/assets/stylesheets/modules/_main.scss
+++ b/app/assets/stylesheets/modules/_main.scss
@@ -19,6 +19,10 @@
       &__member {
         font-size: 12px;
         color: $textGray;
+        display: flex;
+        &__name {
+          padding-left: 5px;
+        }
       }
     }
     &__edit {
@@ -43,7 +47,7 @@
     overflow:scroll;
     &__message-list {
       padding-top: 16px;
-      &__message {
+      .message {
         padding: 20px 0;
         &__user-name {
           font-size: 16px;
