--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -6,7 +6,10 @@
       .main__header__left__group-name
         = @group.name
       .main__header__left__member
-        MEMBER: #{current_user.name}
+        MEMBER:
+        - @users.each do |user|
+          .main__header__left__member__name
+            = user.name
     .main__header__edit
       = link_to "edit", edit_group_path(@group)
   .main__body
