--- a/app/views/messages/_message.html.haml
+++ b/app/views/messages/_message.html.haml
@@ -1,10 +1,9 @@
-.main__body__message-list__message
-  .main__body__message-list__message__user-name
+.message{"data-message-id": "#{message.id}"}
+  .message__user-name
     = message.user.name
-  .main__body__message-list__message__time
+  .message__time
     = format_posted_time(message.created_at)
-  .main__body__message-list__message
     - if message.text.present?
-      %p.main__body__message-list__message__text
+      %p.message__text
         = message.text
-    = image_tag message.image.url, class: "main__body__message-list__message__image" if message.image.present?
+    = image_tag message.image.url, class: "message__image" if message.image.present?
