--- a/app/assets/stylesheets/modules/_sidebar.scss
+++ b/app/assets/stylesheets/modules/_sidebar.scss
@@ -1,6 +1,5 @@
 .sidebar {
   float: left;
-  background-color: $lightNavy;
   height: 100vh;
   width: 300px;
   &__user {
@@ -20,22 +19,21 @@
       padding-right: 20px;
       li {
         padding-left: 5px;
-        a:visited {
-          color: $white;
-        }
       }
     }
   }
   &__groups {
-    &__list {
+    height: calc(100vh - 100px);
+    overflow: scroll;
+    background-color: $lightNavy;
+    color: $white;
+    &__group {
       padding: 20px;
-      &__group-name {
-        color: $white;
+      &__name {
         font-size: 15px;
         padding-bottom: 5px;
       }
-      &__group-message {
-        color: $white;
+      &__message {
         font-size: 11px;
         padding-bottom: 30px;
       }
