--- a/app/views/shared/_side_bar.html.haml
+++ b/app/views/shared/_side_bar.html.haml
@@ -10,10 +10,10 @@
         = link_to edit_user_path(current_user.id) do
           = fa_icon "cog"
   .sidebar__groups
-    .sidebar__groups__list
+    .sidebar__groups__group
       - current_user.groups.each do |group|
         = link_to group_messages_path(group) do
-          .sidebar__groups__list__group-name
+          .sidebar__groups__group__name
             = group.name
-          .sidebar__groups__list__group-message
+          .sidebar__groups__group__message
             = group.show_last_message
