--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -7,3 +7,8 @@
 @import "modules/user";
 @import "modules/flash";
 @import "modules/group";
+
+a, a:visited {
+  text-decoration: none;
+  color: inherit;
+}
