--- a/app/assets/stylesheets/modules/_main.scss
+++ b/app/assets/stylesheets/modules/_main.scss
@@ -82,7 +82,7 @@
     color: $textNavy;
     border: none;
     height: 50px;
-    padding-left: 10px;
+    padding: 0 10px;
     width: calc(100% - 155px);
   }
   &__mask{
@@ -93,6 +93,7 @@
     &__image {
       background-color: $white;
       line-height: 50px;
+      cursor: pointer;
       .hidden {
         display: none;
       }
@@ -106,5 +107,6 @@
     margin-left: 15px;
     border: none;
     float: right;
+    cursor: pointer;
   }
 }
